<resources>
    <string name="app_name">Report-It</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicG9wYWNyaXN0aWFuIiwiYSI6ImNrMjJ2N2hhMjBlM2YzZG1xY21peWQ4ZGMifQ.CHG2D9vyOIHybcfqvhJFmw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="author_name">Popa Mihnea Cristian</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="addLocation">Add location</string>

    <string name="user_location_permission_explanation">Permission granted</string>
    <string name="user_location_permission_not_granted">Permission not granted</string>

    <string name="title_activity_main_activity">MainActivity</string>
    <string name="issue_title">Title</string>
    <string name="issue_type">Issue type</string>
    <string name="issue_severity">Severity</string>
    <string name="issue_description">Description</string>
    <string name="add_location">Add location</string>
    <string name="report_new_issue">Report new issue</string>


    <string name="place_location">Click to place location on map</string>
    <string name="map">Map</string>
    <string name="reported_issues">Reported Issues</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>

    <string-array name="types">
        <item>Litter</item>
        <item>Illegal dumping</item>
        <item>Graffiti</item>
        <item>Pothole</item>
        <item>Roadworks</item>
        <item>Worn out street sign</item>
        <item>Street lighting</item>
        <item>Illegal parking</item>
        <item>Abandoned vehicle</item>
        <item>Damaged tree</item>
        <item>Hanging branches</item>
        <item>Fallen tree</item>
        <item>Other</item>
    </string-array>

    <string-array name="severity">
        <item>Minor</item>
        <item>Moderate</item>
        <item>Major</item>
        <item>Critical</item>
    </string-array>

    <string name="author_email">popamihneacristian@gmail.com</string>
    <string name="email_subject">Issues and Suggestions</string>
    <string name="about_us_text">Report It is an app that allows its users to report all kinds of issues, from litter to graffiti and potholes. The app represents the final project for the Android Advanced course (Google Digital Workshop for Programmers).</string>
    <string name="contact_info1">In order to resolve a complaint regarding the App or to receive further information regarding use of the App, please contact us at:</string>
    <string name="city">Bucharest, Romania</string>
    <string name="contact_us">CONTACT US</string>
</resources>