<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:text="@string/issue_title"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/title"
                android:backgroundTint="#000000"
                android:inputType="text"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:text="@string/issue_description"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/description"
                android:backgroundTint="#000000"
                android:inputType="text"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:text="@string/issue_type"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:gravity="left"
                android:padding="8dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:gravity="end"
                android:text="@string/issue_severity"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/severity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#000000"
                android:gravity="left"
                android:padding="8dp" />

        </TableRow>

        <TableRow
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_cancel_user_data"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button"
                android:minWidth="120dp"
                android:minHeight="8dp"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="#000000" />


            <Button
                android:id="@+id/button_save_user_data"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/rounded_button"
                android:minWidth="120dp"
                android:minHeight="8dp"
                android:text="Save"
                android:textAllCaps="false"
                android:textColor="#000000" />

        </TableRow>

    </TableLayout>

</LinearLayout>